# fxrecord

./: .buildinfo  .gitignore  Cargo.toml  README.md  building.html  configuration.html  deployment.html  fxrecord.example.toml  genindex.html  index.html  objects.inv  requirements.html  requirements.in  requirements.txt  search.html  searchindex.js  testing.html
_sources/: building.rst.txt  configuration.rst.txt  index.rst.txt  requirements.rst.txt  testing.rst.txt
contrib/: Deploy-Docs.ps1  Deploy.ps1  README.md
contrib/config/fxrecorder01.corp.tor1.mozilla.com/: fxrecord.toml
contrib/config/fxrunner01.corp.tor1.mozilla.com/: fxrecord.toml
contrib/deployment/: Profile.ps1  README.md
contrib/deployment/config/fxrecorder01.corp.tor1.mozilla.com/: fxrecord.toml
contrib/deployment/modules/FxRecord-Management/: FxRecord-Management.psm1
contrib/deployment/scripts/: README.md
contrib/deployment/scripts/fxrecorder/: Disable-FxRecorder.ps1  Enable-FxRecorder.ps1  Install-FxRecorder.ps1  Screenshot-FxRunner.ps1  Update-FxRecorder.ps1
contrib/deployment/scripts/fxrunner/: Disable-FxRunner.ps1  Enable-FxRunner.ps1  Install-FxRunner.ps1
docs/: Makefile  protocol.md
docs/source/: building.rst  conf.py  configuration.rst  deployment.rst  index.rst  requirements.rst  testing.rst
fakefox/: Cargo.toml
fakefox/src/: main.rs
fxrecorder/: Cargo.toml
fxrecorder/src/: config.rs  main.rs  proto.rs
fxrecorder/src/lib/: analysis.rs  config.rs  ffmpeg.rs  lib.rs  perfherder.rs  proto.rs  recorder.rs  retry.rs
fxrunner/: Cargo.toml
fxrunner/src/: main.rs  proto.rs  service.rs
fxrunner/src/lib/: config.rs  fs.rs  lib.rs  osapi.rs  proto.rs  request.rs  session.rs  shutdown.rs  splash.rs  taskcluster.rs  zip.rs
fxrunner/src/lib/osapi/: error.rs  handle.rs  perf.rs  process.rs  shutdown.rs
fxrunner/src/lib/shutdown/: windows.rs
integration-tests/: Cargo.toml  build.rs
integration-tests/src/: logging.rs  mocks.rs  test.rs  util.rs
libfxrecord/: Cargo.toml
libfxrecord/src/: config.rs  error.rs  lib.rs  logging.rs  net.rs  prefs.rs  service.rs
libfxrecord/src/net/: message.rs  proto.rs
libfxrecord_macros/: Cargo.toml
libfxrecord_macros/src/: lib.rs
src/lib/: config.rs  lib.rs
src/lib/net/: message.rs  proto.rs
test/: README.md
