[package]
name = "fxrecord"
version = "0.1.0"
authors = ["Barret Rennie <barret@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "fxrecord"
path = "src/lib/lib.rs"

[dependencies]
derive_more = "0.15.0"
serde = { version = "1.0.100", features = ["derive"] }
structopt = "0.3.1"
toml = "0.5.3"
