[package]
name = "fxrecorder"
version = "0.1.0"
authors = ["Barret Rennie <barret@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "libfxrecorder"
path = "src/lib/lib.rs"

[[bin]]
name = "fxrecorder"
path = "src/bin/main.rs"

[dependencies]
async-trait = "0.1.36"
libfxrecord = { path = "../libfxrecord" }
serde = { version = "1.0.110", features = ["derive"] }
slog = "2.5.2"
structopt = "0.3.14"
tempfile = "3.1.0"
thiserror = "1.0.20"
toml = "0.5.6"

[dependencies.tokio]
version = "0.2.21"
features = [
    "macros",
    "process",
    "tcp",
    "rt-threaded",
    "time",
]
