[package]
name = "fxrunner"
version = "0.1.0"
authors = ["Barret Rennie <barret@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "fxrunner"
path = "src/lib/lib.rs"

[[bin]]
name = "fxrunner"
path = "src/bin/main.rs"

[dependencies]
chrono = { version = "0.4.9", features = ["serde"] }
derive_more = "0.15.0"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await", "std"] }
reqwest =  { version = "0.10.0-alpha.2", features = ["json"] }
serde = { version = "1.0.100", features = ["derive"] }
slog = "2.5.2"
slog-async = "2.3.0"
slog-term = "2.4.1"
structopt = "0.3.1"
tempfile = "3.1.0"
tokio = "0.2.0-alpha.6"
tokio-serde-json = "0.3.0"
toml = "0.5.3"
url = "2.1.0"

[dependencies.winapi]
git =  "https://github.com/retep998/winapi-rs"
branch = "0.3"
features = [
    "errhandlingapi",
    "processthreadsapi",
    "securitybaseapi",
    "std",
    "winbase",
    "winreg",
]

[dependencies.libfxrecord]
path = "../libfxrecord"

[dev-dependencies]
assert_matches = "1.3.0"
mockito = "0.22.0"
serde_json = "1.0.41"
