[package]
name = "fxrunner"
version = "0.1.0"
authors = ["Barret Rennie <barret@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "libfxrunner"
path = "src/lib/lib.rs"

[[bin]]
name = "fxrunner"
path = "src/bin/main.rs"

[dependencies]
derive_more = "0.99.7"
futures = "0.3.5"
libfxrecord = { path = "../libfxrecord" }
reqwest =  { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
slog = "2.5.2"
structopt = "0.3.14"
tempfile = "3.1.0"
tokio = { version = "0.2.21", features = ["blocking", "fs", "macros", "tcp", "rt-threaded"] }
toml = "0.5.6"
url = "2.1.1"
zip = "0.5.6"

[dependencies.winapi]
git =  "https://github.com/retep998/winapi-rs"
branch = "0.3"
features = [
    "errhandlingapi",
    "handleapi",
    "processthreadsapi",
    "securitybaseapi",
    "std",
    "winbase",
    "winreg",
]

[dev-dependencies]
assert_matches = "1.3.0"
mockito = "0.25.2"
serde_json = "1.0.55"
