[package]
name = "fxrunner"
version = "0.1.0"
authors = ["Barret Rennie <barret@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "libfxrunner"
path = "src/lib/lib.rs"

[[bin]]
name = "fxrunner"
path = "src/bin/main.rs"

[dependencies]
async-trait = "0.1.36"
futures = "0.3.5"
indoc = "0.3.6"
libfxrecord = { path = "../libfxrecord" }
num-traits = "0.2.12"
rand = "0.7.3"
reqwest =  { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
scopeguard = "1.1.0"
slog = "2.5.2"
structopt = "0.3.14"
tempfile = "3.1.0"
thiserror = "1.0.20"
tokio = { version = "0.2.21", features = ["blocking", "fs", "macros", "io-util", "tcp", "time", "rt-threaded"] }
toml = "0.5.6"
url = "2.1.1"
zip = "0.5.6"

[dependencies.winapi]
version = "0.3.9"
features = [
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "ioapiset",
    "processthreadsapi",
    "securitybaseapi",
    "std",
    "winbase",
    "winioctl",
    "winreg",
]

[dev-dependencies]
assert_matches = "1.3.0"
mockito = "0.25.2"
serde_json = "1.0.55"
winapi = { version = "0.3.9", features = ["winerror"] }
