[package]
name = "integration-tests"
version = "0.1.0"
authors = ["barret Rennie <barret@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[[test]]
name = "integration-tests"
path = "src/test.rs"

[dev-dependencies]
assert_matches = "1.3.0"
futures = "0.3.0"
slog = "2.5.2"
tokio = { version = "0.2.21", features = ["dns", "macros", "rt-threaded", "tcp"] }

[dev-dependencies.fxrecorder]
path = "../fxrecorder"

[dev-dependencies.fxrunner]
path = "../fxrunner"

[dev-dependencies.libfxrecord]
path = "../libfxrecord"
