[package]
name = "integration-tests"
version = "0.1.0"
authors = ["barret Rennie <barret@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[[test]]
name = "integration-tests"
path = "src/test.rs"

[dev-dependencies]
assert_matches = "1.3.0"
chrono = { version = "0.4.9", features = ["serde"] }
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await", "std"] }
mockito = "0.22.0"
serde_json = "1.0.41"
slog = "2.5.2"
tempfile = "3.1.0"
tokio = "0.2.0-alpha.6"
tokio-net = "0.2.0-alpha.6"
url = "2.1.0"

[dev-dependencies.fxrecorder]
path = "../fxrecorder"

[dev-dependencies.fxrunner]
path = "../fxrunner"

[dev-dependencies.libfxrecord]
path = "../libfxrecord"
