[package]
name = "integration-tests"
version = "0.1.0"
authors = ["barret Rennie <barret@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[[test]]
name = "integration-tests"
path = "src/test.rs"

[dev-dependencies]
assert_matches = "1.3.0"
async-trait = "0.1.36"
futures = "0.3.5"
indoc = "0.3.6"
reqwest = "0.10.6"
serde_json = "1.0.55"
slog = "2.5.2"
tempfile = "3.1.0"
tokio = { version = "0.2.21", features = ["dns", "fs", "io-util", "macros", "rt-threaded", "tcp"] }
url = "2.1.1"

[dev-dependencies.fxrecorder]
path = "../fxrecorder"

[dev-dependencies.fxrunner]
path = "../fxrunner"

[dev-dependencies.libfxrecord]
path = "../libfxrecord"
