[package]
name = "libfxrecord"
version = "0.1.0"
authors = ["Barret Rennie <barret@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
derive_more = "0.99.7"
futures = "0.3.5"
serde = { version = "1.0.110", features = ["derive"] }
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.5.0"
structopt = "0.3.14"
toml = "0.5.6"
tokio = { version = "0.2.21", features = ["tcp"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
tokio-serde = { version = "0.6.1", features = ["json"] }
